crates/compiler/src/tests/e2e/bad/0031_let_missing_equals/main.gom
package main;

fn main() {
    let x 42;
}
